# agentspec

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build-plugin.sh
.claude/agents/: _template.md
.claude/agents/architect/: kb-architect.md
.claude/agents/workflow/: brainstorm-agent.md  build-agent.md  define-agent.md  design-agent.md  iterate-agent.md  ship-agent.md
.claude/commands/workflow/: brainstorm.md  build.md  define.md  design.md  iterate.md  ship.md
.claude/kb/: README.md  _index.yaml
.claude/kb/shared/: component-model.md
.claude/sdd/: README.md  _index.md
.claude/sdd/architecture/: ARCHITECTURE.md  WORKFLOW_CONTRACTS.yaml
.claude/skills/agent-create/: SKILL.md
.claude/skills/component-model/: SKILL.md
.claude/skills/create-agent/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/sdd-brainstorm/: SKILL.md
.claude/skills/sdd-build/: SKILL.md
.claude/skills/sdd-define/: SKILL.md
.github/workflows/: quality-checks.yml
docs/: README.md
docs/concepts/: README.md
docs/getting-started/: README.md
docs/reference/: README.md
docs/tutorials/: README.md
plugin/: README.md
plugin/kb/: README.md  _index.yaml
plugin/sdd/: README.md  _index.md
tools/spec-linter/: README.md  USAGE.md  pyproject.toml  spec-lint
tools/spec-linter/schema/: agent_spec.schema.json
tools/spec-linter/spec_linter/: __init__.py  cli.py  models.py  rules.py
tools/spec-linter/tests/: conftest.py  test_agent_spec_contract.py  test_cli.py  test_engine.py  test_immutability.py
(+46 files in other folders)
