[project]
name = "agentspec-spec-linter"
version = "0.1.0"
description = "AgentSpec contract-validation engine (the Linter) — prototype"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
spec-linter = "spec_linter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_linter"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
